--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -25,7 +25,7 @@ clash-for-android:
 
 🚀 低倍节点 = select,🇭🇰 香港低倍,🇹🇼 台湾低倍,🇸🇬 狮城低倍,🇯🇵 日本低倍,🇺🇲 美国低倍,🇰🇷 韩国低倍
 🚀 高级节点 = select,🇭🇰 香港高级,🇹🇼 台湾高级,🇸🇬 狮城高级,🇯🇵 日本高级,🇺🇲 美国高级,🇰🇷 韩国高级
-🚀 手动切换 = select,🛫 守候网络,🛫 MESL,🛫 CTC,🛫 ETON
+🚀 手动切换 = select,🛫 守候网络,🛫 MESL,🛫 CTC,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62
 
 🎓 AI = select,🇺🇲 美国高级,🚀 高级节点,🚀 手动切换
 
@@ -73,11 +73,6 @@ clash-for-android:
 
 # 节点分组
 
-🛫 守候网络 = select,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef
-🛫 MESL = select,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb
-🛫 CTC = select,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6
-🛫 ETON = select,policy-path=https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62
-
 🇭🇰 香港低倍 = fallback,🇭🇰 守候低倍,🇭🇰 MESL低倍,🇭🇰 CTC低倍, url=http://www.gstatic.com/generate_204, interval=60
 🇹🇼 台湾低倍 = fallback,🇹🇼 守候低倍,🇹🇼 MESL低倍,🇹🇼 CTC低倍, url=http://www.gstatic.com/generate_204, interval=60
 🇸🇬 狮城低倍 = fallback,🇸🇬 守候低倍,🇸🇬 MESL低倍,🇸🇬 CTC低倍, url=http://www.gstatic.com/generate_204, interval=60
@@ -92,74 +87,74 @@ clash-for-android:
 🇰🇷 韩国高级 = fallback,🇰🇷 MESL高级,🇺🇲 CTC高级,🇰🇷 守候高级, url=http://www.gstatic.com/generate_204, interval=60
 
 # HK低倍
-🇭🇰 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^.*((?i)\b(hk)\b.*0\.[1-9]).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^.*((?i)\b(hk)\b.*0\.[1-9]).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^.*((?i)\b(hk)\b.*0\.[1-9]).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 守候低倍 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(hk)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 MESL低倍 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(hk)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 CTC低倍 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(hk)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # TW低倍
-🇹🇼 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(tw)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(tw)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(tw)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 守候低倍 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(tw)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 MESL低倍 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(tw)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 CTC低倍 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(tw)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # SG低倍
-🇸🇬 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(sg)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(sg)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(sg)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 守候低倍 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(sg)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 MESL低倍 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(sg)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 CTC低倍 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(sg)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # JP低倍
-🇯🇵 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(jp)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(jp)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(jp)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 守候低倍 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(jp)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 MESL低倍 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(jp)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 CTC低倍 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(jp)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # US低倍
-🇺🇲 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(us)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(us)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(us)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 守候低倍 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(us)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 MESL低倍 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(us)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 CTC低倍 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(us)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # KR低倍
-🇰🇷 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(kr)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(kr)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(kr)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 守候低倍 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(kr)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 MESL低倍 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(kr)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 CTC低倍 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(kr)\b)).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # HK高级
-🇭🇰 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 守候高级 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 MESL高级 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 CTC高级 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # TW高级
-🇹🇼 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 守候高级 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 MESL高级 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 CTC高级 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # SG高级
-🇸🇬 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 守候高级 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 MESL高级 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 CTC高级 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # JP高级
-🇯🇵 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 守候高级 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 MESL高级 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 CTC高级 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # US高级
-🇺🇲 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 守候高级 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 MESL高级 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 CTC高级 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # KR高级
-🇰🇷 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 守候高级 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 MESL高级 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 CTC高级 = url-test,policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)[2-9]x)).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # 游戏节点
-🇭🇰 香港游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇹🇼 台湾游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇸🇬 狮城游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇯🇵 日本游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇺🇲 美国游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇰🇷 韩国游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇭🇰 香港游戏 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇹🇼 台湾游戏 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇸🇬 狮城游戏 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇯🇵 日本游戏 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇺🇲 美国游戏 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇰🇷 韩国游戏 = url-test,policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
 
-🌏 守候线路 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^((?i)(hk|tw|sg|jp).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60
+🌏 守候线路 = url-test,policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef,policy-regex-filter=^((?i)(hk|tw|sg|jp).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60
 
 [Rule]
 # 规则引用
