--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -21,11 +21,18 @@ clash-for-android:
     append-system-dns: false
 
 [Proxy Group]
+
+# 机场
+🛫 守候网络 = select, policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef
+🛫 MESL = select, https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb
+🛫 CTC = select, policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6
+🛫 ETON = select, policy-path=https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62
+
 # 策略组
 
 🚀 低倍节点 = select,🇭🇰 香港低倍,🇹🇼 台湾低倍,🇸🇬 狮城低倍,🇯🇵 日本低倍,🇺🇲 美国低倍,🇰🇷 韩国低倍
 🚀 高级节点 = select,🇭🇰 香港高级,🇹🇼 台湾高级,🇸🇬 狮城高级,🇯🇵 日本高级,🇺🇲 美国高级,🇰🇷 韩国高级
-🚀 手动切换 = select,🛫 守候网络,🛫 MESL,🛫 CTC,https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62
+🚀 手动切换 = select,🛫 守候网络,🛫 MESL,🛫 CTC,🛫 ETON
 
 🎓 AI = select,🇺🇲 美国高级,🚀 高级节点,🚀 手动切换
 
