--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -24,7 +24,7 @@ clash-for-android:
 
 # 机场
 🛫 守候网络 = select, policy-path=https://sub.xttlove.uk/api/v1/client/subscribe?token=5569ef6b224ea1623d34f18cf9b837ef
-🛫 MESL = select, https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb
+🛫 MESL = select, policy-path=https://gixs.org/api/v1/client/subscribe?token=8cc8461467ba343a945b081553938fcb
 🛫 CTC = select, policy-path=https://38.47.221.60:10000/api/v1/client/subscribe?token=abbde927cc38aea924a00dfa6594bca6
 🛫 ETON = select, policy-path=https://one.eton.one/api/v1/client/subscribe?token=5f3dbbf8b13bfd2d5925563332d01d62
 
