--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -94,74 +94,74 @@ clash-for-android:
 🇰🇷 韩国高级 = fallback,🇰🇷 MESL高级,🇺🇲 CTC高级,🇰🇷 守候高级, url=http://www.gstatic.com/generate_204, interval=60
 
 # HK低倍
-🇭🇰 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(hk)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(hk)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(hk)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # TW低倍
-🇹🇼 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(tw)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(tw)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(tw)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # SG低倍
-🇸🇬 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(sg)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(sg)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(sg)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # JP低倍
-🇯🇵 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(jp)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(jp)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(jp)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # US低倍
-🇺🇲 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(us)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(us)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(us)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # KR低倍
-🇰🇷 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*(0.[1-9]))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(kr)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(kr)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(kr)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # HK高级
-🇭🇰 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(hk)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(hk)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(hk)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # TW高级
-🇹🇼 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(tw)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(tw)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(tw)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # SG高级
-🇸🇬 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇸🇬 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(sg)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(sg)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇸🇬 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(sg)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # JP高级
-🇯🇵 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇯🇵 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(jp)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(jp)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇯🇵 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(jp)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # US高级
-🇺🇲 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇺🇲 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(us)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(us)\b))).*(?=.*((?i)[2-9]x))$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇺🇲 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(us)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # KR高级
-🇰🇷 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇰🇷 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*((?i)[2-9]x))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 守候高级 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(kr)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 MESL高级 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(kr)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇰🇷 CTC高级 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(kr)\b))).*(?=.*((?i)[2-9]x)), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # 游戏节点
-🇭🇰 香港游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(?=.*(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn)))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇹🇼 台湾游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(?=.*(((?i)(\b(tw)\b)).*((?i)(game|iplc|iepl|udpn)))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇸🇬 狮城游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(?=.*(((?i)(\b(sg)\b)).*((?i)(game|iplc|iepl|udpn)))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇯🇵 日本游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(?=.*(((?i)(\b(jp)\b)).*((?i)(game|iplc|iepl|udpn)))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇺🇲 美国游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(?=.*(((?i)(\b(us)\b)).*((?i)(game|iplc|iepl|udpn)))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇰🇷 韩国游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=^(?=.*(((?i)(\b(kr)\b)).*((?i)(game|iplc|iepl|udpn)))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇭🇰 香港游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=(?=.*((?i)(\b(hk)\b))).*(?=.*((?i)(game|iplc|iepl|udpn))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇹🇼 台湾游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=(?=.*((?i)(\b(tw)\b))).*(?=.*((?i)(game|iplc|iepl|udpn))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇸🇬 狮城游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=(?=.*((?i)(\b(sg)\b))).*(?=.*((?i)(game|iplc|iepl|udpn))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇯🇵 日本游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=(?=.*((?i)(\b(jp)\b))).*(?=.*((?i)(game|iplc|iepl|udpn))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇺🇲 美国游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=(?=.*((?i)(\b(us)\b))).*(?=.*((?i)(game|iplc|iepl|udpn))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇰🇷 韩国游戏 = url-test,include-other-group=🛫 MESL,🛫 ETON,policy-regex-filter=(?=.*((?i)(\b(kr)\b))).*(?=.*((?i)(game|iplc|iepl|udpn))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
 
-🌏 守候线路 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^((?i)(hk|tw|sg|jp).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60
+🌏 守候线路 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(hk|tw|sg|jp)\b))).*((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60
 
 [Rule]
 # 规则引用
