--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -94,14 +94,14 @@ clash-for-android:
 🇰🇷 韩国高级 = fallback,🇰🇷 MESL高级,🇺🇲 CTC高级,🇰🇷 守候高级, url=http://www.gstatic.com/generate_204, interval=60
 
 # HK低倍
-🇭🇰 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(hk)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(hk)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇭🇰 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(hk)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*((?i)(\b(hk)\b))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*((?i)(\b(hk)\b))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇭🇰 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*((?i)(\b(hk)\b))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # TW低倍
-🇹🇼 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(tw)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=(?=.*((?i)(\b(tw)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
-🇹🇼 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=(?=.*((?i)(\b(tw)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*((?i)(\b(hk)\b))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 MESL低倍 = url-test,include-other-group=🛫 MESL,policy-regex-filter=((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*((?i)(\b(hk)\b))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
+🇹🇼 CTC低倍 = url-test,include-other-group=🛫 CTC,policy-regex-filter=((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*((?i)(\b(hk)\b))), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
 
 # SG低倍
 🇸🇬 守候低倍 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=(?=.*((?i)(\b(sg)\b)))((?=.*0\.[1-9])), url=http://www.gstatic.com/generate_204, interval=60, tolerance=50
