--- a/Done/XTT@MESL@CTC@ETON.yaml
+++ b/Done/XTT@MESL@CTC@ETON.yaml
@@ -730,7 +730,7 @@ proxy-groups:
     type: url-test
     use:
       - 🛫 守候网络
-    filter: "(\b(HK)\b).*(\b(\d+(\.\d+)?)X\b)"
+    filter: "(\b(HK)\b).*([1-9]\d*(\.\d+)?X)"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
