--- a/RuleSet/游戏加速.yaml
+++ b/RuleSet/游戏加速.yaml
@@ -6,3 +6,4 @@ payload:
   - DOMAIN-SUFFIX,battle.net
   - DOMAIN-SUFFIX,appsflyer.com
   - DOMAIN-SUFFIX,backtrace.io
+  - DOMAIN-SUFFIX,skugry.dev
