--- a/Done/XTT@MESL@CTC@ETON.yaml
+++ b/Done/XTT@MESL@CTC@ETON.yaml
@@ -256,6 +256,7 @@ proxy-groups:
   - name: "🌏 国外代理"
     type: select
     proxies:
+      - 🌏 守候线路
       - 🚀 低倍节点
       - 🚀 高级节点
       - 🚀 手动切换
