--- a/Done/XTT@MESL@CTC@ETON.yaml
+++ b/Done/XTT@MESL@CTC@ETON.yaml
@@ -152,6 +152,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
 
+  - name: "📧 Spark"
+    type: select
+    proxies:
+      - 🇸🇬 狮城高级
+      - 🚀 高级节点
+      - 🚀 手动切换
+
   - name: "💳 Paypal"
     type: select
     proxies:
@@ -1153,6 +1160,13 @@ rule-providers:
     path: ./ruleset/Apple.yaml
     interval: 86400
 
+  Spark:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spark/Spark.yaml"
+    path: ./ruleset/Spark.yaml
+    interval: 86400
+
   Paypal:
     type: http
     behavior: classical
@@ -1313,6 +1327,7 @@ rules:
   - RULE-SET,OneDrive,☁️ Onedrive
   - RULE-SET,Microsoft,Ⓜ️ Microsoft
   - RULE-SET,Apple,🍎 Apple
+  - RULE-SET,Spark,📧 Spark
   - RULE-SET,Paypal,💳 Paypal
   - RULE-SET,Telegram,🤝 Telegram
   - RULE-SET,Discord,🤝 Discord
